roles/kubernetes/apps/files/bitwarden/ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  labels:
    name: bitwarden
  annotations:
    linkerd.io/inject: enabled
